--- a/WQI.ipynb
+++ b/WQI.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "WQI.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNmvBgmHEuKIc8F6VEk2VSD",
+      "authorship_tag": "ABX9TyPWILEHu0Lf54cR33CfzCNm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1414,9 +1414,23 @@
         "id": "fEk-tI6zqLHs"
       },
       "source": [
+        "from google.colab import files\n",
+        "import pandas as pd\n",
+        "df.to_csv('Tal.csv')\n",
+        "!cp Tal.csv \"/content/drive/MyDrive/DATA\""
+      ],
+      "execution_count": 19,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "SpeSneBOsmeV"
+      },
+      "source": [
         ""
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     }
   ]
